django-htmx, updated requirements

--- a/templates/planning/matrix.html
+++ b/templates/planning/matrix.html
@@ -109,7 +109,7 @@
 </div>
 {% endblock %}
 
-{# In matrix.html, add HTMX to planting bars #}
+{# matrix.html, add HTMX to planting bars #}
 
 {# Clicking a planting bar loads its detail into the side panel #}
 <td class="week-cell planting-bar {{ css }}"
